@@ -1,3 +1,11 @@
+2007-10-16  Marcus Meissner  <marcus@jet.franken.de>
+
+	* libgphoto2/gphoto2-list.c: Removed artificial limit 
+	  on entries in CameraList (now dynamic) and also
+	  the artificial limit on name/value (now dynamic).
+
+	  This is source code compatible, but not ABI compatible.
+
 2007-07-25  Hubert Figuiere  <hub@figuiere.net>
 
 	* camlibs/ptp2/library.c: Added Kodak Z712 IS
